--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,6 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.5.20", features = [ "derive" ]}
+ratatui = { version = "0.29.0", features = ["all-widgets"] }
+regex = "1.11.0"
+splitty = "1.0.2"
